==> chadahun/STM32-with-FreeRTOS/Core/Src/ssd1306.c <==
/*
 * ssd1306.c
 *
 *  Created on: Aug 16, 2026
 *      Author: cdh
 */

#include "ssd1306.h"
#include <string.h>

static const uint8_t init_cmds[] = {
		0xAE,			// Display OFF
		0x20, 0x00,		// Memory Address Mode: Horizontal
		0xB0,			// Start Page Address
		0xC8,			// COM Scan(Prevent Upside-Down)
		0x00, 0x10,		// Low Column Address / High Column Address
		0x40,			// Start Line
		0x81, 0x7F,		// Contrast
		0xA1,
		0xA6,
		0xA8, 0x3F,
		0xA4,
		0xD3, 0x00,
		0xD5, 0xF0,
		0xD9, 0x22,
		0xDA, 0x12,
		0xDB, 0x20,
		0x8D, 0x14,
		0xAF
};

static const uint8_t font5x7[][5] = {
		0x00, 0x00, 0x00, 0x00, 0x00,// (space)
		0x00, 0x00, 0x5F, 0x00, 0x00,// !
		0x00, 0x07, 0x00, 0x07, 0x00,// "
		0x14, 0x7F, 0x14, 0x7F, 0x14,// #
		0x24, 0x2A, 0x7F, 0x2A, 0x12,// $
		0x23, 0x13, 0x08, 0x64, 0x62,// %
		0x36, 0x49, 0x55, 0x22, 0x50,// &
		0x00, 0x05, 0x03, 0x00, 0x00,// '
		0x00, 0x1C, 0x22, 0x41, 0x00,// (
		0x00, 0x41, 0x22, 0x1C, 0x00,// )
		0x08, 0x2A, 0x1C, 0x2A, 0x08,// *
		0x08, 0x08, 0x3E, 0x08, 0x08,// +
		0x00, 0x50, 0x30, 0x00, 0x00,// ,
		0x08, 0x08, 0x08, 0x08, 0x08,// -
		0x00, 0x60, 0x60, 0x00, 0x00,// .
		0x20, 0x10, 0x08, 0x04, 0x02,// /
		0x3E, 0x51, 0x49, 0x45, 0x3E,// 0
		0x00, 0x42, 0x7F, 0x40, 0x00,// 1
		0x42, 0x61, 0x51, 0x49, 0x46,// 2
		0x21, 0x41, 0x45, 0x4B, 0x31,// 3
		0x18, 0x14, 0x12, 0x7F, 0x10,// 4
		0x27, 0x45, 0x45, 0x45, 0x39,// 5
		0x3C, 0x4A, 0x49, 0x49, 0x30,// 6
		0x01, 0x71, 0x09, 0x05, 0x03,// 7
		0x36, 0x49, 0x49, 0x49, 0x36,// 8
		0x06, 0x49, 0x49, 0x29, 0x1E,// 9
		0x00, 0x36, 0x36, 0x00, 0x00,// :
		0x00, 0x56, 0x36, 0x00, 0x00,// ;
		0x00, 0x08, 0x14, 0x22, 0x41,// <
		0x14, 0x14, 0x14, 0x14, 0x14,// =
		0x41, 0x22, 0x14, 0x08, 0x00,// >
		0x02, 0x01, 0x51, 0x09, 0x06,// ?
		0x32, 0x49, 0x79, 0x41, 0x3E,// @
		0x7E, 0x11, 0x11, 0x11, 0x7E,// A
		0x7F, 0x49, 0x49, 0x49, 0x36,// B
		0x3E, 0x41, 0x41, 0x41, 0x22,// C
		0x7F, 0x41, 0x41, 0x22, 0x1C,// D
		0x7F, 0x49, 0x49, 0x49, 0x41,// E
		0x7F, 0x09, 0x09, 0x01, 0x01,// F
		0x3E, 0x41, 0x41, 0x51, 0x32,// G
		0x7F, 0x08, 0x08, 0x08, 0x7F,// H
		0x00, 0x41, 0x7F, 0x41, 0x00,// I
		0x20, 0x40, 0x41, 0x3F, 0x01,// J
		0x7F, 0x08, 0x14, 0x22, 0x41,// K
		0x7F, 0x40, 0x40, 0x40, 0x40,// L
		0x7F, 0x02, 0x04, 0x02, 0x7F,// M
		0x7F, 0x04, 0x08, 0x10, 0x7F,// N
		0x3E, 0x41, 0x41, 0x41, 0x3E,// O
		0x7F, 0x09, 0x09, 0x09, 0x06,// P
		0x3E, 0x41, 0x51, 0x21, 0x5E,// Q
		0x7F, 0x09, 0x19, 0x29, 0x46,// R
		0x46, 0x49, 0x49, 0x49, 0x31,// S
		0x01, 0x01, 0x7F, 0x01, 0x01,// T
		0x3F, 0x40, 0x40, 0x40, 0x3F,// U
		0x1F, 0x20, 0x40, 0x20, 0x1F,// V
		0x7F, 0x20, 0x18, 0x20, 0x7F,// W
		0x63, 0x14, 0x08, 0x14, 0x63,// X
		0x03, 0x04, 0x78, 0x04, 0x03,// Y
		0x61, 0x51, 0x49, 0x45, 0x43,// Z
		0x00, 0x00, 0x7F, 0x41, 0x41,// [
		0x02, 0x04, 0x08, 0x10, 0x20,// "\"
		0x41, 0x41, 0x7F, 0x00, 0x00,// ]
		0x04, 0x02, 0x01, 0x02, 0x04,// ^
		0x40, 0x40, 0x40, 0x40, 0x40,// _
		0x00, 0x01, 0x02, 0x04, 0x00,// `
		0x20, 0x54, 0x54, 0x54, 0x78,// a
		0x7F, 0x48, 0x44, 0x44, 0x38,// b
		0x38, 0x44, 0x44, 0x44, 0x20,// c
		0x38, 0x44, 0x44, 0x48, 0x7F,// d
		0x38, 0x54, 0x54, 0x54, 0x18,// e
		0x08, 0x7E, 0x09, 0x01, 0x02,// f
		0x08, 0x14, 0x54, 0x54, 0x3C,// g
		0x7F, 0x08, 0x04, 0x04, 0x78,// h
		0x00, 0x44, 0x7D, 0x40, 0x00,// i
		0x20, 0x40, 0x44, 0x3D, 0x00,// j
		0x00, 0x7F, 0x10, 0x28, 0x44,// k
		0x00, 0x41, 0x7F, 0x40, 0x00,// l
		0x7C, 0x04, 0x18, 0x04, 0x78,// m
		0x7C, 0x08, 0x04, 0x04, 0x78,// n
		0x38, 0x44, 0x44, 0x44, 0x38,// o
		0x7C, 0x14, 0x14, 0x14, 0x08,// p
		0x08, 0x14, 0x14, 0x18, 0x7C,// q
		0x7C, 0x08, 0x04, 0x04, 0x08,// r
		0x48, 0x54, 0x54, 0x54, 0x20,// s
		0x04, 0x3F, 0x44, 0x40, 0x20,// t
		0x3C, 0x40, 0x40, 0x20, 0x7C,// u
		0x1C, 0x20, 0x40, 0x20, 0x1C,// v
		0x3C, 0x40, 0x30, 0x40, 0x3C,// w
		0x44, 0x28, 0x10, 0x28, 0x44,// x
		0x0C, 0x50, 0x50, 0x50, 0x3C,// y
		0x44, 0x64, 0x54, 0x4C, 0x44,// z
		0x00, 0x08, 0x36, 0x41, 0x00,// {
		0x00, 0x00, 0x7F, 0x00, 0x00,// |
		0x00, 0x41, 0x36, 0x08, 0x00,// }
		0x08, 0x08, 0x2A, 0x1C, 0x08,// ->
		0x08, 0x1C, 0x2A, 0x08, 0x08 // <-
};

static HAL_StatusTypeDef ssd1306_write_cmd(SSD1306_t *dev, uint8_t cmd){
	HAL_StatusTypeDef CmdRes = HAL_I2C_Mem_Write(dev->hi2c, dev->addr, SSD1306_CTRL_CMD, I2C_MEMADD_SIZE_8BIT, &cmd, sizeof(cmd), 100);

	return CmdRes;
}

static HAL_StatusTypeDef ssd1306_write_data(SSD1306_t *dev, uint8_t *data, uint16_t size){
	HAL_StatusTypeDef DataRes = HAL_I2C_Mem_Write(dev->hi2c, dev->addr, SSD1306_CTRL_DATA, I2C_MEMADD_SIZE_8BIT, data, size, 100);

	return DataRes;
}


HAL_StatusTypeDef SSD1306_UpdateScreen(SSD1306_t *dev){
	for(int i = 0; i < 8; i++){
		HAL_StatusTypeDef CmdRes;
		CmdRes = ssd1306_write_cmd(dev, 0xB0 + i);
		if(CmdRes != HAL_OK) return CmdRes;
		CmdRes = ssd1306_write_cmd(dev, 0x00);
		if(CmdRes != HAL_OK) return CmdRes;
		CmdRes = ssd1306_write_cmd(dev, 0x10);
		if(CmdRes != HAL_OK) return CmdRes;
		HAL_StatusTypeDef DataRes = ssd1306_write_data(dev, &dev->buffer[i * SSD1306_WIDTH], SSD1306_WIDTH);
		if(DataRes != HAL_OK) return DataRes;
	}

	return HAL_OK;
}

void SSD1306_Clear(SSD1306_t *dev){
	memset(dev->buffer, 0, sizeof(dev->buffer));
}

void SSD1306_WriteChar(SSD1306_t *dev, char ch){
	if(ch <= 31 || ch >= 127) ch = '?';
	uint8_t font_idx = ch - 32;
	uint16_t pos = dev->cursor_x + (dev->cursor_y / 8) * SSD1306_WIDTH;
	for(int j = 0; j < 5; j++){
		dev->buffer[pos + j] = font5x7[font_idx][j];
	}
	dev->cursor_x += 6;
}

void SSD1306_WriteString(SSD1306_t *dev, const char *str){
	while(*str){
		SSD1306_WriteChar(dev, *str);
		str++;
	}
}

void SSD1306_SetCursor(SSD1306_t *dev, uint8_t x, uint8_t y){
	dev->cursor_x = x;
	dev->cursor_y = y;
}

HAL_StatusTypeDef SSD1306_Init(SSD1306_t *dev, I2C_HandleTypeDef *hi2c, uint8_t addr){
	dev->hi2c = hi2c;
	dev->addr = addr;
	HAL_Delay(100);
	for(const uint8_t *cmd = init_cmds; cmd < init_cmds + (sizeof(init_cmds) / sizeof(init_cmds[0])); cmd++){
			HAL_StatusTypeDef CmdRes = ssd1306_write_cmd(dev, *cmd);
			if(CmdRes != HAL_OK){
				return CmdRes;
			}
	}
	SSD1306_Clear(dev);
	HAL_StatusTypeDef UpdateRes = SSD1306_UpdateScreen(dev);
	SSD1306_SetCursor(dev, 0, 0);

	return UpdateRes;
}
